test/should_fail/ret_017.grg
rule r : (string)
{
    pattern {
    }
    replace {
        x:Node;
        return (x);
    }
}
